# Aawas

./: CNAME
Backend/: db.sqlite3  pyproject.toml
Backend/apps/aawasUser/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Backend/apps/aawasUser/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_password_userimg.py  0003_alter_user_password_delete_userimg.py  0004_alter_user_email.py
Backend/apps/featuredProperty/: admin.py  apps.py  delete_serializers.py  models.py  serializers.py  urls.py  views.py
Backend/apps/featuredProperty/migrations/: 0001_initial.py  0002_alter_featuredproperty_price.py  0003_propertyimage.py  0004_featuredproperty_details_and_more.py  0005_alter_propertyimage_featured_property.py  0006_featuredproperty_added_by.py  0007_alter_featuredproperty_added_by.py
Backend/apps/latestProperties/: admin.py  apps.py  models.py
Backend/apps/latestProperties/migrations/: 0001_initial.py
Backend/core/: settings.py  urls.py
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: AdminPannel.jsx  App.jsx
Frontend/src/Components/Footer/: Footer.jsx
Frontend/src/Components/Navbar/: CusomNav.jsx  Navbar.jsx
Frontend/src/Components/UserDetails/: UserDetails.jsx
Frontend/src/Components/body/: mainbody.jsx
Frontend/src/Components/body/MainBody page/: FeaturedProperties.jsx  LatestProperty.jsx  News.jsx  PropertyDetails.jsx
Frontend/src/Components/pages/Add Property/: AddProperty.jsx
Frontend/src/Components/pages/Contact/: contact.jsx
(+14 files in other folders)
